Resolve homepage overflow errors.

--- a/pythonmyadmin/static/less/main.less
+++ b/pythonmyadmin/static/less/main.less
@@ -43,16 +43,11 @@ html {
     box-shadow: 0 0 4px #cdd3e2;
     padding: 30px;
     background: white;
+    overflow: hidden;
     @media(max-width: @tablet-breakpoint) {
-      max-width: 96vw;
-    }
-    @media(max-width: 600px) {
-      margin: 0;
-      max-width: unset;
-      
+      width: 90vw;
       padding: 5vw;
     }
-
 
     .database-host-name {
       color: #afb7c3;
@@ -90,7 +85,7 @@ html {
   }
 
   .dash-spreadsheet-container {
-    max-width: 100%;
+    max-width: 100vw;
     margin: 40px auto;
     overflow: hidden;
     border: 1px solid #d3d8e0;
@@ -106,9 +101,10 @@ html {
     width: 1000px;
     max-width: 96vw;
     margin: 20px auto;
+    display: block;
+    width: auto;
     @media(max-width: @tablet-breakpoint) {
       width: unset;
-      max-width: 96vw;;
       margin: 2vw auto 0px auto;
     }
     @media(max-width: @mobile-breakpoint) {
