--- a/pythonmyadmin/static/less/nav.less
+++ b/pythonmyadmin/static/less/nav.less
@@ -16,6 +16,7 @@ header {
   }
   @media(max-width: 600px) {
     padding: 25px 0 !important;
+    max-width: 100vw;
   }
 
   nav {
